--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
